# ChatBot

./: .env.example  .gitignore  ANDROID_BUILD_GUIDE.md  APK_FIX_GUIDE.md  APPROACH.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPLETE_SETUP_GUIDE.md  COMPLETE_SUCCESS_SUMMARY.md  CONTRIBUTING.md  DEMO_SHOWCASE.md  DEPLOYMENT_GUIDE.md  ENHANCEMENTS.md  FINAL_STATUS.md  LICENSE  MOBILE_PWA_FEATURES.md  MOBILE_STRATEGY.md  MOBILE_UX_STYLES.css  PLAY_STORE_GUIDE.md  PROJECT_EXPLANATION.md  README.md  README_TEMPLATE.md  REX_PROJECT_SUMMARY.md  SHOWCASE.md  TECHNICAL_DOCS.md  android-config.json  build-android.sh  capacitor.config.json  create_realme_apk.py  generate_logo.py  index.py  main.py  main_backup.py  main_complete.py  main_mobile_demo.py  main_mobile_optimized.py  main_old.py  main_test.py  main_working.py  manifest.json  (+14 more)
.github/: CONTRIBUTING_CHECKLIST.md  PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: ci.yml
api/: icon.py  manifest.py
app/: agent.py  tools.py
docs/portfolio/: PORTFOLIO_SHOWCASE.md  RESUME_HIGHLIGHTS.md
pwa_mobile_build_2025_09_01/: APK_TROUBLESHOOTING.md  MOBILE_INSTALL.md  README_MOBILE_BUILD.md  Rex-unsigned.aab  Rex-unsigned.apk  debug.keystore
static/: ICONS_README.md  manifest.json  manifest_optimized.json  script.js  script_old.js  style.css  style_old.css  sw.js  sw_enhanced.js
templates/: debug.html  index.html  index_complex.html  index_mobile_optimized.html  index_pwa_optimized.html  simple.html
tests/: conftest.py  test_main.py  test_tools.py
